# chat_with_llm

./: .gitignore  config.yaml.example  downsub.py  llm.py  models.yaml.example  pyproject.toml  readme.md  requirements.txt  run_web_retriever.py  summarize_subtitle.py  test_logging.py
chat_with_llm/: __init__.py  config.py  llm.py  logutils.py  storage.py
chat_with_llm/web/: __init__.py  c4ai.py  hn_comments.py  linkseek.py  mrxwlb.py  online_content.py  utils.py
docs/implementation/: config.md  llm.md  scripts.md  storage.md  web_c4ai.md  web_hn_comments.md  web_linkseek.md  web_mrxwlb.md  web_online_content.md  web_utils.md
docs/plans/: 2026-02-13-github-trending-summary-design.md  2026-02-13-sum-scripts-logging-design.md  2026-02-13-sum-scripts-logging-implementation.md
scripts/: analyze_xwlb_each_day.py  analyze_xwlb_each_day_stocks.sh  analyze_xwlb_new_topic.py  bench_storage_list.py  downsub.py  extract_markdown_response.py  gen_summary_for_chat.py  generate_speech.py  html_utils.py  migrate_file_to_sqlite.py  run_web_retriever.py  sum_github_trending.py  sum_hackernews.py  sum_hn_comments.py  sum_reuters.py  sum_xwlb.py  sum_xwlb_stocks.sh  sum_yahoo_finance.py  sum_youtube.py  summarize_subtitle.py  test_analyze_xwlb.py  test_analyze_xwlb_each_day.py  test_analyze_xwlb_new_topic.py
test/: test_analyze_xwlb.py  test_analyze_xwlb_each_day.py  test_analyze_xwlb_each_day_stocks.sh  test_analyze_xwlb_new_topic.py  test_openai_api.py  test_read_xwlb_stocks.py  test_web_retriever.py
tests/: test_crawl4ai.ipy
web/: __init__.py  mrxwlb.py  online_content.py
