[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "chat_with_llm"
version = "0.1.0"
urls = { Homepage = "https://github.com/yrlihuan/chat_with_llm" }

dependencies = [
    "openai >= 1.64.0",
    "PyYAML >= 6.0.2",
    "beautifulsoup4 >= 4.13.3",
    "lxml >= 5.0.0",
    "requests >= 2.31.0",
    "tqdm >= 4.67.1",
    "langfuse >= 3.12.0",
]

[tool.setuptools]
packages = [
    "chat_with_llm",
    "chat_with_llm.web",
]
